--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,1 +1,15 @@
 // app global css in SCSS form
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity 0.6s ease;
+}
+
+.fade-enter-from,
+.fade-leave-to {
+  opacity: 0;
+}
+
+.fade-enter-to,
+.fade-leave-from {
+  opacity: 1;
+}
